--- a/config.json
+++ b/config.json
@@ -1,7 +1,5 @@
 {
-	"test2": "test",
-	"test": "test",
 	"prefix": "?",
-	"tokens": "OTY0MDc3OTY4NjIyMjQ3OTc2.YlfZkw.ZEIJsJHun4Juw-v8Tjy4pWVHgl8"
+	"tokens": "votre tokens"
 }
 	
